# books-site

./: .gitignore  Dockerfile  docker-compose-prod.yml  docker-compose.yml  heroku.yml  pyproject.toml
books/: admin.py  models.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_review.py  0003_book_cover.py  0004_auto_20211220_1052.py
bookstore_project/: settings.py  urls.py
orders/: views.py
pages/: tests.py  urls.py
templates/: _base.html  home.html  signup.html
templates/account/: login.html  logout.html
templates/account/email/: email_confirmation_message.txt
templates/books/: book_detail.html  book_list.html  search_results.html
templates/orders/: charge.html  purchase.html
templates/registration/: login.html
users/: tests.py  views.py
users/migrations/: 0001_initial.py
