[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["Aydar Gimadiev <gima.aydar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3"
psycopg2-binary = "2.8.6"
django-crispy-forms = "^1.13.0"
django-allauth = "0.40.0"
Pillow = "^8.4.0"
stripe = "^2.63.0"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
